--- a/index.html
+++ b/index.html
@@ -540,6 +540,7 @@
 </head>
 <body>
 <!-- Ad Code -->
+<script type='text/javascript' src='//pl26884969.profitableratecpm.com/68/ab/fd/68abfd8fc229a298713ba0bdf33be0e5.js'></script>
 <script type="text/javascript">
 	atOptions = {
 		'key' : '6981bd74427e634e6c44c740d3ff0094',
@@ -991,7 +992,5 @@
             init();
         });
     </script>
-<script async="async" data-cfasync="false" src="//pl26884951.profitableratecpm.com/d55cb27289cc6de8d076e64e3de34c60/invoke.js"></script>
-<div id="container-d55cb27289cc6de8d076e64e3de34c60"></div>
 </body>
 </html>
